--- a/resume.qmd
+++ b/resume.qmd
@@ -1,89 +1,53 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Jack Peterson's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Jack R. Peterson
+Programer and Artist.
 
 <div id="webaddress">
 <a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+| <a href="http://en.wikipedia.org/wiki/Jack_Peterson">My wikipedia page</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Learning how to work with data bases at BYUI
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+C, C#, Python, little but of art, and being a great team mate
 
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+programming, Art, and History.
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`August 2018 - September 2019`
+__Norco College, Corona CA.__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
-
-
+`August 2022 - now`
+__BYUI, Rexburg ID.__
 
 ## Awards
 
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
-
+`2017`
+Eagle Scout Award
 
 ## Occupation
 
-`1600`
-__Royal Mint__, London
+`2024 - Now`
+__Deep cleaner__, Kanoas Hawaian Grill
 
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
+- Clean the fryers, the referigerators, and clean shelves
+- Mop floors and remove ash from the grill
 
 
 
 <!-- ### Footer
 
-Last updated: May 2013 -->
+Last updated: December 2024 -->
